<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicPlayer</string>
    <string name="action_settings">设置</string>
    <string name="action_add">列表</string>
    <string name="action_search">搜索网络音乐</string>
    <string name="time_zero">00:00</string>
    <string name="str_zero">0</string>
    <string name="str_name">歌曲名</string>
    <string name="str_artist">歌手</string>
    <string name="str_album">专辑</string>
    <string name="str_remove">移除</string>
    <string name="str_operate">操作</string>
    <string name="str_search_hint">王力宏</string>
    <string name="str_lrc_not_found">歌词没找到！</string>
    <string name="str_download">下载到本地</string>
    <string name="str_add_playlist">新建播放列表</string>
    <string name="str_wait_saving">正在保存，请稍等……</string>
    <string name="str_add">+</string>
    <string name="str_playlist_name">播放列表名字</string>
    <string name="str_list_name">名字:</string>
    <string name="str_playing">正在播放</string>
    <string name="str_add_music">添加歌曲</string>
    <string name="str_empty_list">列表为空哦</string>
    <string name="str_loading">正在加载……</string>
    <string name="str_warning">警告</string>
    <string name="str_sure_to_exit">确定要退出播放器？</string>
    <string name="str_exit">退出</string>
    <string name="str_goto_background">后台播放</string>

</resources>
