<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5sp" >

    <TextView
        android:id="@+id/text_index"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/str_zero"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp" >

            <TextView
                android:id="@+id/text_name"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
        		android:textSize="17sp"
                android:text="@string/str_name" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/time_zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:alpha="0.5"
            android:padding="5sp" >

            <TextView
                android:id="@+id/text_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/str_artist" />

            <TextView
                android:id="@+id/text_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/str_album" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>