<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:padding="5sp" >

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_list_name"
            android:layout_marginRight="5sp" />

        <EditText
            android:id="@+id/edit_list_name"
            android:hint="@string/str_playlist_name"
            android:layout_width="0dip"
            android:background="@android:drawable/editbox_background"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>

    <Button
            android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/str_add" />

</LinearLayout>